--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </main>
         <footer class="modal__footer">
             <section class="modal__footerSection">
-                <article class="modal__FooterArticle">
-                    <button class="modal__FooterButton">Okey</button>
-                    <button class="modal__FooterButton">Cancel</button>
+                <article class="modal__footerArticle">
+                    <button class="modal__footerButton modal__footerButton--green">Okey</button>
+                    <button class="modal__footerButton modal__footerButton--red">Cancel</button>
                 </article>
             </section>
         </footer>
