Mobil, animálás van hátra

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Modal</title>
 </head>
 <body>
-    <button class="showModal">Show Modal</button>
+   
+       <button class="body__showModalBtn"><h1>Show Modal</h1></button>
+    
     <div class="body__modalContainer">
         <div class="modalContainer__modal">
         <header class="modal__header">
