Focusba helyezés javitva

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <footer class="modal__footer">
             <section class="modal__footerSection">
                 <article class="modal__footerArticle">
-                    <button class="modal__footerButton modal__footerButton--green">Okey</button>
-                    <button class="modal__footerButton modal__footerButton--red">Cancel</button>
+                    <button class="modal__footerButton modal__footerButton--green" tabindex="1">Okey</button>
+                    <button class="modal__footerButton modal__footerButton--red" tabindex="2">Cancel</button>
                 </article>
             </section>
         </footer>
